--- a/styles/Menu/menu.module.css
+++ b/styles/Menu/menu.module.css
@@ -116,3 +116,84 @@
         margin: 0px 0px;
     }
 }
+
+/* Estilos de toggle.js */
+
+.sidePanel {
+    display: flex;
+    flex-direction: column;
+    /* Centrar los elementos internos */
+    position: fixed;
+    overflow-y: auto;
+    /* Poder scrollear dentro del submenú */
+    top: 0;
+    left: 0;
+    /* Mantener el Panel en la esquina superior izquierda */
+    width: 218px;
+    height: 100%;
+    border: 2px solid #106efc;
+    background-color: #b6e0f2;
+    border-radius: 5px;
+    padding: 1rem;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+    gap: 15px;
+    z-index: 1020;
+    /* Se sobrepone al Botón para mantener su lado recto */
+    text-align: center;
+}
+
+.sidePanel.open {
+    transform: translateX(0);
+}
+
+.sidePanel h2{
+    color: #106efc;
+}
+
+.sidePanel a{
+    display: flex;
+    flex-direction: column; /* columna para que la imagen quede arriba y el texto abajo */
+    align-items: center;    /* centra horizontalmente la imagen y el texto */
+    text-align: center;
+}
+
+.panelBtn {
+    position: fixed;
+    top: 50%;
+    left: -3px;
+    transform: translateX(0);
+    transition: transform 0.3s ease;
+    padding: 5px 5px;
+    background-color: #106efc;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    font-size: 0.9rem;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    /* Cambia el cursor a una mano al pasar sobre el botón. */
+    max-width: 150px;
+    z-index: 1010;
+    /* Se sobrepone al Overlay */
+}
+
+.panelBtn.open {
+    transform: translateX(218px);
+}
+
+.panelBtn:hover {
+    border: 2px solid #106efc;
+    background-color: #3b89ff;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 1000;
+    /* Se sobrepone al Menú */
+}
