--- a/styles/Menu/menu.module.css
+++ b/styles/Menu/menu.module.css
@@ -39,6 +39,10 @@
     padding: 15px;
 }
 
+.cajaAzul a{
+    gap: 10px;
+}
+
 /* Texto informativo pequeño */
 .textoInfo {
     font-size: 0.8rem;
@@ -109,6 +113,13 @@
     border-radius: 5px;
     resize: none;
     font-size: 0.9rem;
+    outline: none;
+    font-family: "Segoe UI", Inter;
+    line-height: 1.4;
+}
+
+.box textarea:focus{
+    border: 2px solid #3b89ff;
 }
 
 .box small {
@@ -125,6 +136,7 @@
     white-space: pre-wrap;
     font-size: 1rem;
     justify-content: left;
+    line-height: 1.4;
 }
 
 .response ul {
@@ -146,6 +158,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    max-height: min-content;
     gap: 15px;
 }
 
@@ -208,4 +221,5 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.4);
     z-index: 1000;
+    backdrop-filter: blur(1px);
 }
